force-app/main/default/objects/Unidad__c/Unidad__c.object-meta.xml
<CustomObject>
    <label>Unidad</label>
    <nameField>
        <label>Nombre de Unidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>