force-app/main/default/objects/Unidad__c/fields/Ambientes__c.field-meta.xml
<CustomField>
    <fullName>Ambientes__c</fullName>
    <label>Ambientes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Ambiente</fullName>
            </value>
            <value>
                <fullName>2 Ambientes</fullName>
            </value>
            <value>
                <fullName>3 Ambientes</fullName>
            </value>
            <value>
                <fullName>4 Ambientes</fullName>
            </value>
            <value>
                <fullName>Monoambiente</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Cochera</fullName>
            </value>
            <value>
                <fullName>Casa 3 amb duplex c/jardin y quincho</fullName>
            </value>
            <value>
                <fullName>Casa 5 amb duplex c/jardin, quincho y hab. serv.</fullName>
            </value>
            <value>
                <fullName>3 ambientes c/patio</fullName>
            </value>
            <value>
                <fullName>3 ambientes c/terraza</fullName>
            </value>
            <value>
                <fullName>4 ambientes c/patio</fullName>
            </value>
            <value>
                <fullName>4 ambientes c/terraza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>