force-app/main/default/objects/Unidad__c/fields/Apoderado__c.field-meta.xml
<CustomField>
    <fullName>Apoderado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apoderado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades (Apoderado)</relationshipLabel>
    <relationshipName>Unidades4</relationshipName>
    <type>Lookup</type>
</CustomField>