force-app/main/default/objects/Unidad__c/fields/Caja_pago_broker__c.field-meta.xml
<CustomField>
    <fullName>Caja_pago_broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caja pago broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Moneda_comision__c</field>
            <operation>equals</operation>
            <valueField>Caja__c.Moneda__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Unidades (Caja pago broker)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>