force-app/main/default/objects/Unidad__c/fields/Caja_para_cobros__c.field-meta.xml
<CustomField>
    <fullName>Caja_para_cobros__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caja para cobros</label>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>