force-app/main/default/objects/Unidad__c/fields/Canje_por_Inversor_de_tierra__c.field-meta.xml
<CustomField>
    <fullName>Canje_por_Inversor_de_tierra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canje por Inversor de tierra</label>
    <type>Checkbox</type>
</CustomField>