force-app/main/default/objects/Unidad__c/fields/Cantidad_de_cuotas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_cuotas__c</fullName>
    <label>Cantidad de cuotas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>