force-app/main/default/objects/Unidad__c/fields/Co_titular_1__c.field-meta.xml
<CustomField>
    <fullName>Co_titular_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-titular 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Propietario</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades (Co-titular 1)</relationshipLabel>
    <relationshipName>Unidades2</relationshipName>
    <type>Lookup</type>
</CustomField>