force-app/main/default/objects/Unidad__c/fields/Co_titular_2__c.field-meta.xml
<CustomField>
    <fullName>Co_titular_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-titular 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades (Co-titular 2)</relationshipLabel>
    <relationshipName>Unidades3</relationshipName>
    <type>Lookup</type>
</CustomField>