force-app/main/default/objects/Unidad__c/fields/Comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Comercializadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comercializadora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comercializadora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades (Comercializadora)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>