force-app/main/default/objects/Unidad__c/fields/Comision_comercializador__c.field-meta.xml
<CustomField>
    <fullName>Comision_comercializador__c</fullName>
    <formula>Precio_de_venta__c *  Comision_inmobiliaria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comision comercializador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>