force-app/main/default/objects/Unidad__c/fields/Comision_Director_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Comision_Director_Comercial__c</fullName>
    <formula>Precio_de_venta__c * 2/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comision Director Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>