force-app/main/default/objects/Unidad__c/fields/Comision_inmobiliaria__c.field-meta.xml
<CustomField>
    <fullName>Comision_inmobiliaria__c</fullName>
    <label>Porcentaje comercializador</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>