force-app/main/default/objects/Unidad__c/fields/Con_cochera__c.field-meta.xml
<CustomField>
    <fullName>Con_cochera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con cochera</label>
    <type>Checkbox</type>
</CustomField>