force-app/main/default/objects/Unidad__c/fields/Documento_a_firmar__c.field-meta.xml
<CustomField>
    <fullName>Documento_a_firmar__c</fullName>
    <label>Documento a firmar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Cesion del boleto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>