force-app/main/default/objects/Unidad__c/fields/Escriturado__c.field-meta.xml
<CustomField>
    <fullName>Escriturado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escriturado</label>
    <type>Checkbox</type>
</CustomField>