force-app/main/default/objects/Unidad__c/fields/Especificaciones_entrega__c.field-meta.xml
<CustomField>
    <fullName>Especificaciones_entrega__c</fullName>
    <inlineHelpText>Incorporar las condiciones acordadas con el propietarios para la entrega de la unidad</inlineHelpText>
    <label>Especificaciones entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>