force-app/main/default/objects/Unidad__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>Vendida</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Posecion</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>