force-app/main/default/objects/Unidad__c/fields/Fecha_control_planilla_sales__c.field-meta.xml
<CustomField>
    <fullName>Fecha_control_planilla_sales__c</fullName>
    <label>Fecha control planilla sales</label>
    <type>Date</type>
</CustomField>