force-app/main/default/objects/Unidad__c/fields/Fecha_entrega_llave__c.field-meta.xml
<CustomField>
    <fullName>Fecha_entrega_llave__c</fullName>
    <label>Fecha entrega llave</label>
    <type>Date</type>
</CustomField>