force-app/main/default/objects/Unidad__c/fields/Fecha_pago_comision_broker__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pago_comision_broker__c</fullName>
    <label>Fecha pago comisión broker</label>
    <type>Date</type>
</CustomField>