force-app/main/default/objects/Unidad__c/fields/Fecha_pago_comision_comercial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pago_comision_comercial__c</fullName>
    <label>Fecha pago comisión comercial</label>
    <type>Date</type>
</CustomField>