force-app/main/default/objects/Unidad__c/fields/Fecha_posecion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_posecion__c</fullName>
    <label>Fecha poseción</label>
    <type>Date</type>
</CustomField>