force-app/main/default/objects/Unidad__c/fields/Fecha_validacion_contra_boleto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_validacion_contra_boleto__c</fullName>
    <label>Fecha validacion contra boleto</label>
    <type>Date</type>
</CustomField>