force-app/main/default/objects/Unidad__c/fields/Gasto_sellos__c.field-meta.xml
<CustomField>
    <fullName>Gasto_sellos__c</fullName>
    <label>Gasto sellos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>