force-app/main/default/objects/Unidad__c/fields/Gastos_equipamiento__c.field-meta.xml
<CustomField>
    <fullName>Gastos_equipamiento__c</fullName>
    <label>Gastos equipamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>