force-app/main/default/objects/Unidad__c/fields/Gastos_escribania__c.field-meta.xml
<CustomField>
    <fullName>Gastos_escribania__c</fullName>
    <label>Gastos escribania</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>