force-app/main/default/objects/Unidad__c/fields/Gastos_fondo_reserva__c.field-meta.xml
<CustomField>
    <fullName>Gastos_fondo_reserva__c</fullName>
    <label>Gastos fondo reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>