force-app/main/default/objects/Unidad__c/fields/Gastos_reglamento_copropiedad__c.field-meta.xml
<CustomField>
    <fullName>Gastos_reglamento_copropiedad__c</fullName>
    <label>Gastos reglamento copropiedad</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>