force-app/main/default/objects/Unidad__c/fields/Imagenes_previas_a_entrega__c.field-meta.xml
<CustomField>
    <fullName>Imagenes_previas_a_entrega__c</fullName>
    <label>Imagenes previas a entrega</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>