force-app/main/default/objects/Unidad__c/fields/Importe_pagado_broker__c.field-meta.xml
<CustomField>
    <fullName>Importe_pagado_broker__c</fullName>
    <label>Importe pagado broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>