force-app/main/default/objects/Unidad__c/fields/Importes_pagados__c.field-meta.xml
<CustomField>
    <fullName>Importes_pagados__c</fullName>
    <label>Importes pagados</label>
    <summarizedField>Cobro_unidad__c.Importe_cobrado__c</summarizedField>
    <summaryForeignKey>Cobro_unidad__c.Unidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>