force-app/main/default/objects/Unidad__c/fields/Informaci_n_para_venta__c.field-meta.xml
<CustomField>
    <fullName>Informaci_n_para_venta__c</fullName>
    <label>Información para venta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>