force-app/main/default/objects/Unidad__c/fields/Metros_amenities__c.field-meta.xml
<CustomField>
    <fullName>Metros_amenities__c</fullName>
    <label>Metros amenities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>