force-app/main/default/objects/Unidad__c/fields/Metros_cuadrados__c.field-meta.xml
<CustomField>
    <fullName>Metros_cuadrados__c</fullName>
    <label>Metros cuadrados venta</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>