force-app/main/default/objects/Unidad__c/fields/Metros_cuadrados_totales__c.field-meta.xml
<CustomField>
    <fullName>Metros_cuadrados_totales__c</fullName>
    <formula>Metros_cubiertos__c + Metros_semi_cubiertos__c + Metros_descubiertos__c + Metros_amenities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros cuadrados totales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>