force-app/main/default/objects/Unidad__c/fields/Metros_cubiertos__c.field-meta.xml
<CustomField>
    <fullName>Metros_cubiertos__c</fullName>
    <label>Metros cubiertos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>