force-app/main/default/objects/Unidad__c/fields/Metros_descubiertos__c.field-meta.xml
<CustomField>
    <fullName>Metros_descubiertos__c</fullName>
    <label>Metros descubiertos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>