force-app/main/default/objects/Unidad__c/fields/Metros_semi_cubiertos__c.field-meta.xml
<CustomField>
    <fullName>Metros_semi_cubiertos__c</fullName>
    <label>Metros semi-cubiertos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>