force-app/main/default/objects/Unidad__c/fields/Moneda_comision__c.field-meta.xml
<CustomField>
    <fullName>Moneda_comision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moneda comision</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Unidades (Moneda comision)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>