force-app/main/default/objects/Unidad__c/fields/Monto_de__c.field-meta.xml
<CustomField>
    <fullName>Monto_de__c</fullName>
    <label>Monto declarado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>