force-app/main/default/objects/Unidad__c/fields/Monto_financiado__c.field-meta.xml
<CustomField>
    <fullName>Monto_financiado__c</fullName>
    <formula>Valor_de_la_unidad_Financiado__c - Anticipo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto financiado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>