force-app/main/default/objects/Unidad__c/fields/Monto_pagado_en_el_boleto__c.field-meta.xml
<CustomField>
    <fullName>Monto_pagado_en_el_boleto__c</fullName>
    <label>Monto pagado en el boleto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>