force-app/main/default/objects/Unidad__c/fields/Movimiento_de_caja_comision_broker__c.field-meta.xml
<CustomField>
    <fullName>Movimiento_de_caja_comision_broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movimiento de caja comision broker</label>
    <referenceTo>Movimiento_de_caja__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>