force-app/main/default/objects/Unidad__c/fields/Movimiento_de_caja_comision_comercial__c.field-meta.xml
<CustomField>
    <fullName>Movimiento_de_caja_comision_comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movimiento de caja comision comercial</label>
    <referenceTo>Movimiento_de_caja__c</referenceTo>
    <relationshipLabel>Unidades (Movimiento de caja comision comercial)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>