force-app/main/default/objects/Unidad__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>