force-app/main/default/objects/Unidad__c/fields/Observacaciones_entrega__c.field-meta.xml
<CustomField>
    <fullName>Observacaciones_entrega__c</fullName>
    <label>Observacaciones entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>