force-app/main/default/objects/Unidad__c/fields/Observaciones_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_carga__c</fullName>
    <formula>if ( Total_calculado_operacion__c !=  Valor_real_operacion__c	, &#39;Revise que el plan de pagos de el mismo monto que el Valor real de la operacion&#39;,&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observaciones de carga</label>
    <type>Text</type>
</CustomField>