force-app/main/default/objects/Unidad__c/fields/Orientacion__c.field-meta.xml
<CustomField>
    <fullName>Orientacion__c</fullName>
    <label>Orientacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frente</fullName>
            </value>
            <value>
                <fullName>Contra-frente</fullName>
            </value>
            <value>
                <fullName>Interna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>