force-app/main/default/objects/Unidad__c/fields/Piso__c.field-meta.xml
<CustomField>
    <fullName>Piso__c</fullName>
    <label>Piso</label>
    <length>10</length>
    <type>Text</type>
</CustomField>