force-app/main/default/objects/Unidad__c/fields/Porcentaje_expensas__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_expensas__c</fullName>
    <label>Porcentaje expensas</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>