force-app/main/default/objects/Unidad__c/fields/Precio_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_venta__c</fullName>
    <label>Monto segun boleto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>