force-app/main/default/objects/Unidad__c/fields/Propietario_principal__c.field-meta.xml
<CustomField>
    <fullName>Propietario_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Propietario</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>