force-app/main/default/objects/Unidad__c/fields/Saldo_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar__c</fullName>
    <formula>Total_a_pagar_calculado__c -   Importes_pagados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>