force-app/main/default/objects/Unidad__c/fields/Total_a_pagar_calculado__c.field-meta.xml
<CustomField>
    <fullName>Total_a_pagar_calculado__c</fullName>
    <label>Total a pagar segun plan de pago</label>
    <summarizedField>Cobro_unidad__c.Importe__c</summarizedField>
    <summaryForeignKey>Cobro_unidad__c.Unidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>