force-app/main/default/objects/Unidad__c/fields/Total_calculado_operacion__c.field-meta.xml
<CustomField>
    <fullName>Total_calculado_operacion__c</fullName>
    <formula>Total_a_pagar_calculado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total calculado operacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>