force-app/main/default/objects/Unidad__c/fields/Valor_de_la_cuota__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_la_cuota__c</fullName>
    <formula>Monto_financiado__c /  Cantidad_de_cuotas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de la cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>