force-app/main/default/objects/Unidad__c/fields/Valor_de_la_unidad_efectivo__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_la_unidad_efectivo__c</fullName>
    <formula>Metros_cuadrados_totales__c *  Valor_metro_cuadrado_Cash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de la unidad Efectivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>