force-app/main/default/objects/Unidad__c/fields/Valor_fondo_Alajamiento__c.field-meta.xml
<CustomField>
    <fullName>Valor_fondo_Alajamiento__c</fullName>
    <label>Valor fondo Alajamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>