force-app/main/default/objects/Unidad__c/fields/Valor_fondo_de_reparo__c.field-meta.xml
<CustomField>
    <fullName>Valor_fondo_de_reparo__c</fullName>
    <label>Valor fondo de reparo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>