force-app/main/default/objects/Unidad__c/fields/Valor_Gastos_escribania__c.field-meta.xml
<CustomField>
    <fullName>Valor_Gastos_escribania__c</fullName>
    <formula>Precio_de_venta__c *  Gastos_escribania__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Gastos escribania</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>