force-app/main/default/objects/Unidad__c/fields/Valor_Gastos_reglamento_copropiedad__c.field-meta.xml
<CustomField>
    <fullName>Valor_Gastos_reglamento_copropiedad__c</fullName>
    <formula>Precio_de_venta__c *  Gastos_reglamento_copropiedad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Gastos reglamento copropiedad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>