force-app/main/default/objects/Unidad__c/fields/Valor_metro_cuadrado_Cash__c.field-meta.xml
<CustomField>
    <fullName>Valor_metro_cuadrado_Cash__c</fullName>
    <label>Valor metro cuadrado en efectivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>