force-app/main/default/objects/Unidad__c/fields/Valor_real_operacion__c.field-meta.xml
<CustomField>
    <fullName>Valor_real_operacion__c</fullName>
    <label>Valor real operacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>