force-app/main/default/objects/Unidad__c/validationRules/Validacion_de_unidad_vendida.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_de_unidad_vendida</fullName>
    <active>true</active>
    <errorConditionFormula>if( ISPICKVAL(Estado__c, &#39;Vendida&#39;) , IF( !ISBLANK( Fecha_boleto__c ) &amp;&amp; !ISBLANK( Valor_real_operacion__c ) &amp;&amp;
 !ISBLANK( Comercializadora__c ), false, true),false)</errorConditionFormula>
    <errorMessage>Si el estado de la unidad es vendiida, los campos, comercializadora, fecha de boleto y valor real operacion deben estar completados.</errorMessage>
</ValidationRule>