force-app/main/default/objects/Unidad__c/listViews/A_revisar_plan_de_pago.listView-meta.xml
<ListView>
    <fullName>A_revisar_plan_de_pago</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Observaciones_de_carga__c</columns>
    <columns>Estado__c</columns>
    <columns>Precio_de_venta__c</columns>
    <columns>Monto_pagado_en_el_boleto__c</columns>
    <columns>Total_a_pagar_calculado__c</columns>
    <columns>Total_calculado_operacion__c</columns>
    <columns>Propietario_principal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Observaciones_de_carga__c</field>
        <operation>notContain</operation>
    </filters>
    <label>A revisar plan de pago</label>
</ListView>