force-app/main/default/objects/Unidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Propietario_principal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>