force-app/main/default/objects/Unidad__c/listViews/Sin_obra.listView-meta.xml
<ListView>
    <fullName>Sin_obra</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Propietario_principal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obra__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sin obra</label>
</ListView>