force-app/main/default/objects/Unidad__c/listViews/Unidades_9_de_Julio.listView-meta.xml
<ListView>
    <fullName>Unidades_9_de_Julio</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Metros_cuadrados__c</columns>
    <columns>Valor_de_la_unidad_efectivo__c</columns>
    <columns>Estado__c</columns>
    <columns>Propietario_principal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obra__c</field>
        <operation>equals</operation>
        <value>9 de Julio</value>
    </filters>
    <label>Unidades 9 de Julio</label>
</ListView>