force-app/main/default/objects/Unidad__c/listViews/Unidades_Bonpland_2214.listView-meta.xml
<ListView>
    <fullName>Unidades_Bonpland_2214</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Metros_cuadrados__c</columns>
    <columns>Valor_de_la_unidad_efectivo__c</columns>
    <columns>Ambientes__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_validacion_contra_boleto__c</columns>
    <columns>Propietario_principal__c</columns>
    <columns>Co_titular_1__c</columns>
    <columns>Co_titular_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obra__c</field>
        <operation>equals</operation>
        <value>Bonpland 2214</value>
    </filters>
    <label>Unidades Bonpland 2214</label>
</ListView>