force-app/main/default/objects/Unidad__c/listViews/Unidades_Cramer.listView-meta.xml
<ListView>
    <fullName>Unidades_Cramer</fullName>
    <columns>Obra__c</columns>
    <columns>NAME</columns>
    <columns>Metros_cuadrados__c</columns>
    <columns>Valor_de_la_unidad_efectivo__c</columns>
    <columns>Ambientes__c</columns>
    <columns>Estado__c</columns>
    <columns>Propietario_principal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obra__c</field>
        <operation>equals</operation>
        <value>Av. Cramer  2451</value>
    </filters>
    <label>Unidades Av. Cramer  2451</label>
</ListView>